--- a/qtc_packaging/debian_fremantle/rules
+++ b/qtc_packaging/debian_fremantle/rules
@@ -27,6 +27,7 @@ build-stamp: configure-stamp
 	dh_testdir
 
 	# Add here commands to compile the package.
+	# qmake
 	# $(MAKE) # Uncomment this line for use without Qt Creator
 	#docbook-to-man debian/torchio.sgml > torchio.1
 
